--- a/Hotel-Yadran/index.html
+++ b/Hotel-Yadran/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="jpg" href="./src/assets/img/1-0efcc482.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Hotel Yadran</title>
+
   </head>
   <body>
     <div id="root"></div>
